log

Thu 17 Aug 2023 08:22:42 PM UTC: 
 tests:  0|7
total_score: 0/70
19c5e92
Thu 17 Aug 2023 08:24:39 PM UTC: 
 exercises.c | 103 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 100 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:55:5: error: redefinition of ‘main’
   55 | int main() {
      |     ^~~~
exercises.c:26:5: note: previous definition of ‘main’ with type ‘int()’
   26 | int main(){
      |     ^~~~
exercises.c:108:5: error: redefinition of ‘main’
  108 | int main() {
      |     ^~~~
exercises.c:26:5: note: previous definition of ‘main’ with type ‘int()’
   26 | int main(){
      |     ^~~~
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’ [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
test.c: In function ‘test_reverseArray’:
test.c:125:5: error: implicit declaration of function ‘reverseArray’; did you mean ‘test_reverseArray’? [-Werror=implicit-function-declaration]
  125 |     reverseArray(arr, size);
      |     ^~~~~~~~~~~~
      |     test_reverseArray
test.c: In function ‘test_filterEvenNumbers’:
test.c:151:19: error: implicit declaration of function ‘filterEvenNumbers’; did you mean ‘test_filterEvenNumbers’? [-Werror=implicit-function-declaration]
  151 |     int *result = filterEvenNumbers(arr, size, &newSize);
      |                   ^~~~~~~~~~~~~~~~~
      |                   test_filterEvenNumbers
test.c:151:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c: At top level:
test.c:382:5: error: redefinition of ‘main’
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
In file included from test.c:1:
exercises.c:26:5: note: previous definition of ‘main’ with type ‘int()’
   26 | int main(){
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5550380
Thu 17 Aug 2023 08:28:42 PM UTC: 
 exercises.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:55:5: error: redefinition of ‘main’
   55 | int main() {
      |     ^~~~
exercises.c:26:5: note: previous definition of ‘main’ with type ‘int()’
   26 | int main(){
      |     ^~~~
exercises.c:108:5: error: redefinition of ‘main’
  108 | int main() {
      |     ^~~~
exercises.c:26:5: note: previous definition of ‘main’ with type ‘int()’
   26 | int main(){
      |     ^~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:158:5: error: ‘main’ is normally a non-static function [-Werror=main]
  158 | int main() {
      |     ^~~~
exercises.c: In function ‘main’:
exercises.c:159:17: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  159 |   int arr[] = (1, 3, 5, 7, 9);
      |                 ^
exercises.c:159:20: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  159 |   int arr[] = (1, 3, 5, 7, 9);
      |                    ^
exercises.c:159:23: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  159 |   int arr[] = (1, 3, 5, 7, 9);
      |                       ^
exercises.c:159:26: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  159 |   int arr[] = (1, 3, 5, 7, 9);
      |                          ^
exercises.c:159:15: error: invalid initializer
  159 |   int arr[] = (1, 3, 5, 7, 9);
      |               ^
exercises.c:160:21: error: ‘sizeof’ on array function parameter ‘arr1’ will return size of ‘int *’ [-Werror=sizeof-array-argument]
  160 |   int size1 = sizeof(arr1) / sizeof(arr1[0]);
      |                     ^
exercises.c:132:28: note: declared here
  132 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2, int merged[]) {
      |                        ~~~~^~~~~~
exercises.c:165:7: error: unused variable ‘result’ [-Werror=unused-variable]
  165 |   int result[size1 + size2];
      |       ^~~~~~
exercises.c:159:7: error: unused variable ‘arr’ [-Werror=unused-variable]
  159 |   int arr[] = (1, 3, 5, 7, 9);
      |       ^~~
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’ [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
test.c: In function ‘test_reverseArray’:
test.c:125:5: error: implicit declaration of function ‘reverseArray’; did you mean ‘test_reverseArray’? [-Werror=implicit-function-declaration]
  125 |     reverseArray(arr, size);
      |     ^~~~~~~~~~~~
      |     test_reverseArray
test.c: In function ‘test_filterEvenNumbers’:
test.c:151:19: error: implicit declaration of function ‘filterEvenNumbers’; did you mean ‘test_filterEvenNumbers’? [-Werror=implicit-function-declaration]
  151 |     int *result = filterEvenNumbers(arr, size, &newSize);
      |                   ^~~~~~~~~~~~~~~~~
      |                   test_filterEvenNumbers
test.c:151:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:382:5: error: redefinition of ‘main’
In file included from test.c:1:
exercises.c:158:5: note: previous definition of ‘main’ with type ‘int()’
  158 | int main() {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
In file included from test.c:1:
exercises.c:158:5: error: ‘main’ defined but not used [-Werror=unused-function]
  158 | int main() {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
47ecc11
